--- a/HW0/basic-python/02-exercises.ipynb
+++ b/HW0/basic-python/02-exercises.ipynb
@@ -1,17 +1,19 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Excercises for Lecture 2\n",
     "\n",
-    "Your Name:   \n",
-    "Your UID:   \n",
-    "Your E-Mail:  "
+    "Your Name: Anthony Le  \n",
+    "Your UID: u1368721  \n",
+    "Your E-Mail: anthony.le@utah.edu  "
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -26,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -49,6 +51,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -65,12 +68,24 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "def add_numbers(a, b):\n",
+    "    return a + b\n",
+    "\n",
+    "print(add_numbers(3, 7))"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -85,6 +100,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"Anthony\"\n",
+    "age = 29\n",
+    "major = \"Biomedical Engineering\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Anthony, I am 29 years old, and I am majoring in Biomedical Engineering.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"My name is \" + name + \", I am \" + str(age) + \" years old, and I am majoring in \" + major + \".\")"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -100,10 +144,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = 2\n",
+    "\n",
+    "def multiply_numbers(a, b):\n",
+    "    return (a * b) / c\n",
+    "\n",
+    "print(multiply_numbers(3, 7))"
+   ]
   }
  ],
  "metadata": {
@@ -122,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
